# better_unwrap

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: basic_usage.rs
src/: lib.rs  option.rs  result.rs
